
           CHANGELOG for the EPR-API, VERSION 2.3.x


----------------------------------------------------------------------
Changes from Version 2.3 to Version 2.3.1 (of DD. MMMM YYYY)
----------------------------------------------------------------------

1) TBW

----------------------------------------------------------------------
Changes from Version 2.2 to Version 2.3 (of 02. January 2026)
----------------------------------------------------------------------
1) Bugfix in epr_band.c: [EPR-7] Interpolation of geolocation ADS
2) Bugfix in epr_core.c: Setting errno to 0 in method epr_str_to_number.
3) Switched to a new test file.
4) Fixed some memory leaks (gh-15).
5) Packed data structures to reduce memory usage.
6) Minor low-level performance improvements.
7) Support for ATSR-2 files stored in the ENVISAT format.
8) Added support for ERS products in ENVISAT format (gh-2).
9) Support for the CMake build system (gh-6 and gh-10).
10) Support for products generated by ASAR processor v6.02 (gh-8).
11) Pack structures to reduce memory usage (gh-16).
12) Performance optimization (gh-17).
13) Extend reader to read ATSR-2 files.
14) Fix support for ASAR APS products (gh-20).
15) Fix support for ASA_WVI_1P (gh-9 and gh-21).
16) Add support for MERIS IODD8 (gh-11 and gh-22). 


----------------------------------------------------------------------
Changes from Version 2.1 to Version 2.2 (of 31. July 2010)
----------------------------------------------------------------------
Generally replaced usage of data type "long" by "int" since "long" is 
ambiguous with respect to 32bit and 64bit operating systems.

----------------------------------------------------------------------
Changes from Version 2.0.5 to Version 2.1 (of 6. May 2009)
----------------------------------------------------------------------
Support of MER_FRS (full resulution full swath) products
Support of IODD7

----------------------------------------------------------------------